<resources>
    <string name="app_name">LogRegForm</string>
    <string name="usernameReg">Username</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
    <string name="title_home">Home</string>

    <string name="title_learn">Play</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_settings">Settings</string>
    <string name="title_quick">Quick</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome To Shabd</string>

    <string name="Overview_content">Autism is a complex neurobehavioral condition that includes impairments in social interaction and developmental language and communication skills combined with rigid, repetitive behavior". To overcome this problem we came up with an educational app that helps this people to get educated via a completely free platform. This app can also be used to educated the kids. The UI of the app is user friendly. The app acts like an all time friend for the autism patients, who are often neglected by the society.</string>
    <string name="shabd">SHABD</string>
    <string name="overview">Overview</string>
    <string name="developer">Developer</string>
    <string name="submit">Submit</string>

    <string name="url" translatable="false">https://googledictionaryapi.eu-gb.mybluemix.net/?define="</string>
    <string name="query" translatable="false">"</string>

    <string-array name="alphabets">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>

    </string-array>

    <string name="default_notification_channel_id" translatable="false">notify</string>
    <string name="english" translatable="false">E</string>
    <string name="hindi" translatable="false">H</string>
    <string name="play_draw">Draw</string>
    <string name="update_setting">Update Data</string>
    <string name="notification_setting">Daily Notifications</string>
    <string name="language_setting">Language and Voice</string>
    <string name="logout_setting">Logout</string>
    <string name="about_setting">About Shabd</string>
    <string name="rate_setting">Rate and Review</string>
    <string name="play_play_text">Play Piano</string>
    <string name="story_text">Watch Videos</string>
    <string name="developers" translatable="false">Developed by Mobile App Society of Developer Student Club , Indian Institute of Technology Patna.</string>

    <string name="undo">Undo </string>
    <string name="stroke_increase">SW+ </string>
    <string name="stroke_decrease">SW- </string>
    <string name="color">Color </string>

    <string name="notification_channel_name" translatable="false">DM</string>
    <string name="quiz" translatable="false">Quiz</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Hindi</item>
    </string-array>
</resources>
