<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluredbackgroundimg"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="110dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivLogLogo"
                android:layout_width="350dp"
                android:layout_height="208dp"

                android:layout_marginTop="18dp"
                android:layout_marginBottom="55dp"
                android:scaleType="fitCenter"
                android:src="@drawable/zz45" />


            <AutoCompleteTextView
                android:id="@+id/atvEmailLog"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/emailReg"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="15sp" />


            <AutoCompleteTextView
                android:id="@+id/atvPasswordLog"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/passwordReg"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/forgot_password"
                android:textColor="@color/gray" />


            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/loginbtn"
                android:fontFamily="@font/adamina"
                android:text="@string/sign_inLog"
                android:textColor="#000" />


            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/signup_redirect"
                android:textColor="@color/gray" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>