<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loqbg"
    tools:context=".RegistrationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="641dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-43dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="413dp"
                android:layout_height="217dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="55dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:src="@drawable/zz45" />

            <ImageView
                android:id="@+id/ivJoinUs"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/reg" />


            <AutoCompleteTextView
                android:id="@+id/atvEmailReg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_mail"
                android:drawableLeft="@drawable/icon_mail"
                android:drawablePadding="10dp"
                android:hint="@string/emailReg"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <AutoCompleteTextView
                android:id="@+id/atvPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_password"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/passwordReg"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="141dp"
                android:layout_height="49dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/sign"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/signin_redirect"
                android:textColor="#3F51B5"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>
